fix: mobile overflow

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ ul {
 
 html {
   scroll-padding-top: 50px;
+  overflow-x: hidden;
 }
 
 body {
