--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -10,6 +10,7 @@ ul {
 
 html {
   scroll-padding-top: 50px;
+  overflow-x: hidden;
 }
 
 body {
@@ -42,7 +43,6 @@ a {
 .body-hidden {
   overflow: hidden;
 }
-
 
 //-------MEDIA-------
 
